página inicial fake

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Parrot</title>
 </head>
-<body>Descubra de maneira rápida os commits de seu cara favorito! =D
+<body> <h2>Parrot</h2>
+<strong>Descubra de maneira rápida os commits de seu cara favorito! =D</strong>
 </body>
 </html>
