--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Parrot</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/bootstrap-responsive.css" rel="stylesheet">
+	
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<title>Parrot</title>
 </head>
-<body> <h2>Parrot</h2>
-<strong>Descubra de maneira rápida os commits de seu cara favorito! =D</strong>
-</body>
+<body>
+	<div class="container-fluid">
+	<div class="hero-unit">
+		<h3>Parrot <small> - Descubra de maneira rápida os commits de seu cara favorito! =D</small> </h3> 
+	</div>
+	<div class="well">
+		<fieldset> 
+			<legend>Busque os Commts:</legend>
+			<form action="#">
+				<p>
+					<label for="gituser">Digite o GitUser: </label>
+					<input type="text" name="gituser" id="gituser" class="input-medium search-query"/>
+					<button type="submit" class="btn">Buscar</button>
+					<a href="#" target="blank">
+						<i class="icon-question-sign"></i>
+					</a>
+				</p>
+			</form>
+		</fieldset>
+	</div>
+	<hr>
+	<footer>
+		<p>&copy; Startuprs de Primeira Viagem 2012<small> - Anny, Jean, Hugo e Wallace</small></p>
+	</footer>
+	</div>
 </html>
