--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -30,7 +30,7 @@
 		</div>
 		<hr>
 		<footer>
-			<p>&copy; Startups de Primeira Viagem 2012<small> - Anny, Jean, Hugo e Wallace</small></p>
+			<p>&copy; Startupers de Primeira Viagem 2012<small> - Anny, Jean, Hugo e Wallace</small></p>
 		</footer>
 	</div>
 </html>
