Ajustando o action do formulário

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -23,10 +23,10 @@
 		 	 <div class="span6">
 				<fieldset> 
 					<legend>Busque os Commts:</legend>
-					<form action="#">
+					<form action="/timeline">
 						<p>
-							<label for="gituser">Digite o usuário do <a href="http://github.com">GitHub</a></label>
-							<input type="text" name="gituser" id="gituser" class="input-medium search-query"/>
+							<label for="userName">Digite o usuário do <a href="http://github.com">GitHub</a>:</label>
+							<input type="text" name="userName" id="userName" class="input-medium search-query"/>
 							<button type="submit" class="btn btn-success">Buscar</button>
 							<a href="#" target="blank">
 								<i class="icon-question-sign"></i>
